# mullvad-state

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
py3status/: mullvad.py
src/: main.rs
